--- a/projects.css
+++ b/projects.css
@@ -13,7 +13,9 @@ align-items: center;
   align-self: end;
   padding-left: 335px;
 }
-
+.main99{
+  padding-left: 189px;
+}
 .main3{
   padding-left: 140px;
 }
