--- a/about.css
+++ b/about.css
@@ -1,6 +1,9 @@
 body{
 
   text-align: center;
+  background-image: url(vb4.webp);
+  /* background-repeat: no-repeat; */
+
 }
 
 h1{
@@ -11,6 +14,9 @@ h1{
 .container{
   width: 60%;
 }
+h3 {
+  color: red;
+}
 
 hr{
   padding-bottom: 2%;
@@ -18,4 +24,6 @@ hr{
 
 p{
   padding-bottom: 4%;
+  color: #505050;
+  font-size: 1.1em;
 }
