--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,6 +17,8 @@
 		font: inherit;
 		vertical-align: baseline;
 	}
+	
+	
 
 
 	.link{
@@ -3248,6 +3250,7 @@
 			#footer {
 				padding: 6em 0 4em 0;
 			}
+			
 
 		}
 
@@ -3259,6 +3262,18 @@
 
 				#footer .icons {
 					font-size: 1em;
+				}
+				.test {
+					display: none;
+					/* width: 0px; */
+				}
+				.test2 {
+					margin: 0 auto;
+					width: 100%;
+				}
+				.test3 {
+					margin: 0 auto;
+					justify-content: center;
 				}
 
 		}
@@ -3275,5 +3290,8 @@
 					margin: 0;
 					padding: 0;
 				}
+			
+				
+				
 
 		}
