--- a/projects.css
+++ b/projects.css
@@ -5,6 +5,16 @@ flex-direction: row;
 align-items: center;
 }
 
+
+
+@media only screen and (min-width: 10px) {
+  .res {
+    color: orange;
+  }
+}
+
+
+
 .main77{
 display: flex;
 flex-direction: row;
