--- a/restaurant/assets/css/custom2.css
+++ b/restaurant/assets/css/custom2.css
@@ -53,7 +53,7 @@ h4{
 /* HERO */
 #hero{
 	background: url('../img/ritas.jpg') 50% 0 repeat fixed;
-	min-height: 740px;
+    min-height: 740px;
 	padding: 40px 0;
 	color: white;
 	-webkit-font-smoothing: antialiased;
@@ -192,7 +192,8 @@ h4{
 }
 .catering-right-img-padding{
     padding: 100px;
-}/* /CATERING */
+}
+/* /CATERING */
 
 
 /* BUFFET */
@@ -448,6 +449,10 @@ footer{
     .card{
         width: 70%;
         margin: 20px auto;
+    }
+/* CATERING IMAGE */
+    .catering-right-img-padding{
+        padding: 50px;
     }
 }/* CARD */
 
