--- a/index/assets/css/main.css
+++ b/index/assets/css/main.css
@@ -2787,6 +2787,9 @@
 
 		@media screen and (max-width: 480px) {
 
+			.wrapper.style3 {
+        background-attachment: scroll;
+    }
 			.wrapper {
 				padding: 2em 0 0.1em 0;
 			}
